--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js"
@@ -13,7 +14,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "mogoose": "^0.0.1-security",
+    "mongoose": "^8.5.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
